--- a/components/post_view/post/index.css
+++ b/components/post_view/post/index.css
@@ -6,6 +6,14 @@
     margin: .5em 0;
     padding-top: .5em !important;
     padding-bottom: .5em !important;
+    border-bottom: 1px dashed transparent;
+    border-top: 1px dashed transparent;
+}
+
+.post:hover {
+    background-color: #f5f5f5;
+    border-bottom-color: #ddd;
+    border-top-color: #ddd;
 }
 
 .post .post__body {
@@ -14,6 +22,7 @@
     display: inline-block;
     border-radius: 8px;
     width: auto !important;
+    max-width: 50% !important;
 }
 
 .post .post__header {
