--- a/components/post_view/post/post.css
+++ b/components/post_view/post/post.css
@@ -3,35 +3,22 @@
 }
 
 .post {
-    margin: .5em 0;
-    padding-top: .5em !important;
-    padding-bottom: .5em !important;
-    border-bottom: 1px dashed transparent;
-    border-top: 1px dashed transparent;
+    background-color: transparent;
+    transition: all 0.3s;
 }
 
 .post:hover {
-    background-color: #f5f5f5;
-    border-bottom-color: #ddd;
-    border-top-color: #ddd;
+    background-color: #d8eaf6;
 }
 
 .post .post__body {
-    background-color: #fff !important;
-    padding: 1em 2em;
-    display: inline-block;
-    border-radius: 8px;
-    width: auto !important;
+    padding-bottom: 0 !important;
 }
 
 .post .post__header {
     font-size: 16px !important;
     color: #000 !important;
-    margin-bottom: 12px;
-}
-
-.post.current--user .post__body {
-    background-color: #9fe65a !important;
+    margin: 0.25em 0;
 }
 
 .post.current--user .post-image__columns .post-image__column {
