--- a/components/post_view/post_list_virtualized/post_list_virtualized.css
+++ b/components/post_view/post_list_virtualized/post_list_virtualized.css
@@ -1,8 +1,9 @@
-
 .post-list__content {
     background-color: #f5f5f5;
 }
 
-.post-list__dynamic{
+.post-list__dynamic {
+    top: 0;
+    bottom: auto !important;
     background-color: transparent;
 }
